# kedro-pricing-app

./: .gitignore  README.md  pyproject.toml
conf/base/: catalog.yml  parameters_data_processing.yml
notebooks/: data_exploration.ipynb
src/kedro_pricing_app/: __init__.py  __main__.py  settings.py
src/kedro_pricing_app/pipelines/data_processing/: nodes.py  pipeline.py
