[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "kedro_pricing_app"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
kedro-pricing-app = "kedro_pricing_app.__main__:main"

[tool.kedro]
package_name = "kedro_pricing_app"
project_name = "kedro-pricing-app"
kedro_init_version = "0.19.1"
tools = ""

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "kedro_pricing_app.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
